--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8"/>
+		<link rel="stylesheet" href="style.css"/>
 		<title>la page du Test</title>
 	</head>
 	<body>
